src/main/default/objects/Payment_Applied__c/Payment_Applied__c.object-meta.xml
<CustomObject>
    <label>Payment Applied</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Applied</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>