src/main/default/objects/Payment_Applied__c/fields/AR_Account__c.field-meta.xml
<CustomField>
    <fullName>AR_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select an account from the Chart of Accounts that is an AR record type.</errorMessage>
        <filterItems>
            <field>CoA__c.Type__c</field>
            <operation>equals</operation>
            <value>AR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CoA__c</referenceTo>
    <relationshipLabel>Payment Applied (AR Account)</relationshipLabel>
    <relationshipName>Payment_Applied1</relationshipName>
    <type>Lookup</type>
</CustomField>