src/main/default/objects/Payment_Applied__c/fields/Cash_Account__c.field-meta.xml
<CustomField>
    <fullName>Cash_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select an account from the Chart of Accounts that is a Cash record type.</errorMessage>
        <filterItems>
            <field>CoA__c.Type__c</field>
            <operation>equals</operation>
            <value>Bank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CoA__c</referenceTo>
    <relationshipLabel>Payment Applied</relationshipLabel>
    <relationshipName>Payment_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>