src/main/default/objects/Payment_Applied__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payment Applied</relationshipLabel>
    <relationshipName>Payment_Applied</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>